WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294132
dNR: high priority redirects don't beat low priority blocks
https://bugs.webkit.org/show_bug.cgi?id=294132
Summary
dNR: high priority redirects don't beat low priority blocks
Elijah Sawyers
Reported
2025-06-06 11:12:20 PDT
rdar://145241581
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-06-06 11:47:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46431
EWS
Comment 2
2025-06-09 09:25:20 PDT
Committed
296000@main
(19746da205f1): <
https://commits.webkit.org/296000@main
> Reviewed commits have been landed. Closing PR #46431 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug