dNR: high priority redirects don't beat low priority blocks https://bugs.webkit.org/show_bug.cgi?id=294132 rdar://145241581

Reviewed by Timothy Hatcher.

This patch fixes a bug where a high priority dNR redirect rule wouldn't take
precendence over a lower priority block rule. This was happening because when
we process the content rules lists for a load, we'd cancel the request if it
was blocked. Blocking the request wasn't giving the redirect enough time to
take action.

The fix for this is to add a boolean to the actions list struct to indicate if
a redirect rule was encountered prior to a block rule. If that's the case, we
shouldn't cancel the request and allow the redirect to happen.

* Source/WebCore/contentextensions/ContentExtensionsBackend.cpp:
(WebCore::ContentExtensions::ContentExtensionsBackend::processContentRuleListsForLoad):
* Source/WebCore/contentextensions/ContentRuleListResults.h:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadResourceSynchronously):
* Source/WebCore/loader/LinkLoader.cpp:
(WebCore::LinkLoader::preconnectIfNeeded):
* Source/WebCore/loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::willSendRequestInternal):
* Source/WebCore/loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::requestResource):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ContentRuleListNotification.mm:

Canonical link: https://commits.webkit.org/296000@main