Source/WebCore/contentextensions/ContentExtensionsBackend.cpp
@@ -305,6 +305,9 @@ ContentRuleListResults ContentExtensionsBackend::processContentRuleListsForLoad(
                 }
             }, [&] (const RedirectAction& redirectAction) {
                 if (initiatingDocumentLoader.allowsActiveContentRuleListActionsForURL(contentRuleListIdentifier, url)) {
+                    if (!results.summary.blockedLoad)
+                        results.summary.redirectedPriorToBlock = true;
+
                     result.redirected = true;
                     results.summary.redirectActions.append({ redirectAction, m_contentExtensions.get(contentRuleListIdentifier)->extensionBaseURL() });
                 }
